--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,21 @@ plugins {
 
 group = 'hkmu.comps380f'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 repositories {
     mavenCentral()
 }
 
+ext {
+    springVersion = '6.0.5'
+    junitVersion = '5.9.1'
+}
 dependencies {
     compileOnly 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
@@ -22,6 +31,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
+    implementation 'jakarta.el:jakarta.el-api:5.0.1'
+
+    implementation "org.springframework:spring-webmvc:${springVersion}"
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
 tasks.named('test') {
